<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scalc_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTituloHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_meses"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/scalc_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consulta_tus_ingresos_anteriores"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/tvTituloHistorial"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistorial"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_ticket"/>


    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_registros_guardados_a_n"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="6dp"
        android:text="Ver Estadísticas"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:backgroundTint="@color/scalc_primary"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>